Make page-list visible in navigation

--- a/testbok/EPUB/css/testbok.css
+++ b/testbok/EPUB/css/testbok.css
@@ -3,8 +3,10 @@ aside {
   padding: 10px;
 }
 
+/*
 nav[epub\:type~='landmarks'],
 nav[epub\:type~='page-list'] {
   display: none;
   visibility: hidden;
 }
+*/
