--- a/testbok/EPUB/css/testbok.css
+++ b/testbok/EPUB/css/testbok.css
@@ -1,3 +1,5 @@
+@namespace epub "http://www.idpf.org/2007/ops";
+
 aside {
   border: 1px solid #ccc;
   padding: 10px;
@@ -25,6 +27,8 @@ p.ex {
 }
 
 nav[role="doc-toc"] ol li,
+nav[epub\:type~="landmarks"] ol li,
+nav[epub|type~="landmarks"] ol li,
 nav[role="doc-pagelist"] ol li {
   list-style-type: none;
 }
